--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -7,3 +7,9 @@
      name: apache2
      state: present
 
+  - name: i want to start webserver on ansible nodes
+    services:
+      name: apache2
+      state: started
+      
+ 
